--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -168,6 +168,8 @@
     <ClInclude Include="objects\ChunkManager.h" />
     <ClInclude Include="objects\Chunk.h" />
     <ClInclude Include="objects\Light.h" />
+    <ClInclude Include="objects\Region.h" />
+    <ClInclude Include="objects\util\BlockArea.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="rendering\Camera.h" />
     <ClInclude Include="util\AABB.h" />
@@ -177,6 +179,7 @@
     <ClInclude Include="mesh\MeshComponents.h" />
     <ClInclude Include="mesh\Mesh.h" />
     <ClInclude Include="util\Morton.h" />
+    <ClInclude Include="util\Parallel.h" />
     <ClInclude Include="util\rle.h" />
     <ClInclude Include="rendering\Shader.h" />
     <ClInclude Include="util\terrain\BiomeGenerator.h" />
@@ -199,6 +202,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="objects\util\BlockArea.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
