--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{E2D5DCC3-E128-4028-9496-46A1095CAF01}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>HephaestusEngine</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -47,7 +47,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -104,7 +104,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)ext\include;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)ext\include;$(ProjectDir);$(VULKAN_SDK)\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
@@ -164,6 +164,54 @@
   <ItemGroup>
     <ClInclude Include="common\CommonUtil.h" />
     <ClInclude Include="common\Constants.h" />
+    <ClInclude Include="common\CreateInfoBase.h" />
+    <ClInclude Include="common\vkAssert.h" />
+    <ClInclude Include="common\VkDebug.h" />
+    <ClInclude Include="common\vk_constants.h" />
+    <ClInclude Include="engine\mesh\Mesh.h" />
+    <ClInclude Include="engine\mesh\MeshComponents.h" />
+    <ClInclude Include="engine\objects\Block.h" />
+    <ClInclude Include="engine\objects\Chunk.h" />
+    <ClInclude Include="engine\objects\ChunkManager.h" />
+    <ClInclude Include="engine\objects\Light.h" />
+    <ClInclude Include="engine\objects\Player.h" />
+    <ClInclude Include="engine\objects\Region.h" />
+    <ClInclude Include="engine\objects\util\BlockArea.h" />
+    <ClInclude Include="engine\objects\util\Inventory.h" />
+    <ClInclude Include="engine\renderer\command\CommandPool.h" />
+    <ClInclude Include="engine\renderer\command\TransferPool.h" />
+    <ClInclude Include="engine\renderer\compute\ComputePipeline.h" />
+    <ClInclude Include="engine\renderer\core\Camera.h" />
+    <ClInclude Include="engine\renderer\core\Instance.h" />
+    <ClInclude Include="engine\renderer\core\LogicalDevice.h" />
+    <ClInclude Include="engine\renderer\core\PhysicalDevice.h" />
+    <ClInclude Include="engine\renderer\ForwardDecl.h" />
+    <ClInclude Include="engine\renderer\gui\imguiShaders.h" />
+    <ClInclude Include="engine\renderer\gui\imguiWrapper.h" />
+    <ClInclude Include="engine\renderer\gui\imgui_lib\imconfig.h" />
+    <ClInclude Include="engine\renderer\gui\imgui_lib\imgui.h" />
+    <ClInclude Include="engine\renderer\gui\imgui_lib\imgui_internal.h" />
+    <ClInclude Include="engine\renderer\gui\imgui_lib\stb_rect_pack.h" />
+    <ClInclude Include="engine\renderer\gui\imgui_lib\stb_textedit.h" />
+    <ClInclude Include="engine\renderer\gui\imgui_lib\stb_truetype.h" />
+    <ClInclude Include="engine\renderer\NonCopyable.h" />
+    <ClInclude Include="engine\renderer\render\DepthStencil.h" />
+    <ClInclude Include="engine\renderer\render\Framebuffer.h" />
+    <ClInclude Include="engine\renderer\render\GraphicsPipeline.h" />
+    <ClInclude Include="engine\renderer\render\MSAA.h" />
+    <ClInclude Include="engine\renderer\render\Renderpass.h" />
+    <ClInclude Include="engine\renderer\render\Swapchain.h" />
+    <ClInclude Include="engine\renderer\resource\Buffer.h" />
+    <ClInclude Include="engine\renderer\resource\Allocator.h" />
+    <ClInclude Include="engine\renderer\resource\Image.h" />
+    <ClInclude Include="engine\renderer\resource\Memory.h" />
+    <ClInclude Include="engine\renderer\resource\Model.h" />
+    <ClInclude Include="engine\renderer\resource\PipelineCache.h" />
+    <ClInclude Include="engine\renderer\resource\Resource.h" />
+    <ClInclude Include="engine\renderer\resource\ShaderModule.h" />
+    <ClInclude Include="engine\renderer\resource\Texture.h" />
+    <ClInclude Include="engine\renderer\resource\VertexTypes.h" />
+    <ClInclude Include="engine\renderer\resource\VkResource.h" />
     <ClInclude Include="objects\Block.h" />
     <ClInclude Include="objects\ChunkManager.h" />
     <ClInclude Include="objects\Chunk.h" />
@@ -176,18 +224,48 @@
     <ClInclude Include="util\AABB.h" />
     <ClInclude Include="util\Context.h" />
     <ClInclude Include="ext\include\LodePNG\lodepng.h" />
+    <ClInclude Include="util\easylogging++.h" />
+    <ClInclude Include="util\lodepng.h" />
     <ClInclude Include="util\lodeTexture.h" />
     <ClInclude Include="mesh\MeshComponents.h" />
     <ClInclude Include="mesh\Mesh.h" />
     <ClInclude Include="util\Morton.h" />
+    <ClInclude Include="util\Parallel.h" />
     <ClInclude Include="util\rle.h" />
     <ClInclude Include="rendering\Shader.h" />
     <ClInclude Include="util\terrain\BiomeGenerator.h" />
     <ClInclude Include="util\terrain\TerrainCommon.h" />
     <ClInclude Include="util\terrain\GeneratorBase.h" />
     <ClInclude Include="util\Viewport.h" />
+    <ClInclude Include="util\view_frustum.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="engine\objects\Block.cpp" />
+    <ClCompile Include="engine\objects\Chunk.cpp" />
+    <ClCompile Include="engine\objects\ChunkManager.cpp" />
+    <ClCompile Include="engine\objects\Light.cpp" />
+    <ClCompile Include="engine\objects\util\BlockArea.cpp" />
+    <ClCompile Include="engine\renderer\command\CommandPool.cpp" />
+    <ClCompile Include="engine\renderer\command\TransferPool.cpp" />
+    <ClCompile Include="engine\renderer\core\Instance.cpp" />
+    <ClCompile Include="engine\renderer\core\LogicalDevice.cpp" />
+    <ClCompile Include="engine\renderer\core\PhysicalDevice.cpp" />
+    <ClCompile Include="engine\renderer\gui\imguiWrapper.cpp" />
+    <ClCompile Include="engine\renderer\gui\imgui_lib\extra_fonts\binary_to_compressed_c.cpp" />
+    <ClCompile Include="engine\renderer\gui\imgui_lib\imgui.cpp" />
+    <ClCompile Include="engine\renderer\gui\imgui_lib\imgui_demo.cpp" />
+    <ClCompile Include="engine\renderer\gui\imgui_lib\imgui_draw.cpp" />
+    <ClCompile Include="engine\renderer\render\DepthStencil.cpp" />
+    <ClCompile Include="engine\renderer\render\Framebuffer.cpp" />
+    <ClCompile Include="engine\renderer\render\GraphicsPipeline.cpp" />
+    <ClCompile Include="engine\renderer\render\MSAA.cpp" />
+    <ClCompile Include="engine\renderer\render\Renderpass.cpp" />
+    <ClCompile Include="engine\renderer\render\Swapchain.cpp" />
+    <ClCompile Include="engine\renderer\resource\Buffer.cpp" />
+    <ClCompile Include="engine\renderer\resource\Image.cpp" />
+    <ClCompile Include="engine\renderer\resource\PipelineCache.cpp" />
+    <ClCompile Include="engine\renderer\resource\ShaderModule.cpp" />
+    <ClCompile Include="engine\renderer\resource\Texture.cpp" />
     <ClCompile Include="HephaestusEngine.cpp" />
     <ClCompile Include="objects\Block.cpp" />
     <ClCompile Include="objects\ChunkManager.cpp">
@@ -213,6 +291,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="util\easylogging++.cc">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="util\lodepng.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="util\terrain\GeneratorBase.cpp">
