Progress on implementing allocator.

--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -261,6 +261,7 @@
     <ClCompile Include="engine\renderer\render\MSAA.cpp" />
     <ClCompile Include="engine\renderer\render\Renderpass.cpp" />
     <ClCompile Include="engine\renderer\render\Swapchain.cpp" />
+    <ClCompile Include="engine\renderer\resource\Allocator.cpp" />
     <ClCompile Include="engine\renderer\resource\Buffer.cpp" />
     <ClCompile Include="engine\renderer\resource\Image.cpp" />
     <ClCompile Include="engine\renderer\resource\PipelineCache.cpp" />
