Adding Morton encoding using BMI2 bit-interleaving intrinsics.

--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="common\CommonUtil.h" />
     <ClInclude Include="common\Constants.h" />
     <ClInclude Include="common\CreateInfoBase.h" />
+    <ClInclude Include="common\Morton.h" />
     <ClInclude Include="common\vkAssert.h" />
     <ClInclude Include="common\VkDebug.h" />
     <ClInclude Include="common\vk_constants.h" />
