--- a/HephaestusEngine/HephaestusEngine.vcxproj
+++ b/HephaestusEngine/HephaestusEngine.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="common\vk_constants.h" />
     <ClInclude Include="engine\generation\NoiseSampler.h" />
     <ClInclude Include="engine\generation\sdnoise1234.h" />
+    <ClInclude Include="engine\generation\TerrainGenerator.h" />
     <ClInclude Include="engine\mesh\Mesh.h" />
     <ClInclude Include="engine\mesh\MeshComponents.h" />
     <ClInclude Include="engine\objects\Block.h" />
