--- a/HephaestusEngine.vcxproj
+++ b/HephaestusEngine.vcxproj
@@ -104,14 +104,14 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;C:\Users\kgstr\Documents\Visual Studio 2017\Projects\VulpesRender2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;$(ProjectDir)\VulpesRender\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(VULKAN_SDK)\Lib\vulkan-1.lib;C:\Users\kgstr\Documents\Visual Studio 2017\Projects\VulpesRender2\build\Debug\VulpesRender.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(VULKAN_SDK)\Lib\vulkan-1.lib;$(ProjectDir)\VulpesRender\build\Debug\VulpesRender.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -367,11 +367,6 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
       <DeploymentContent>false</DeploymentContent>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Visual Studio 2017\Projects\VulpesRender2\build\VulpesRender.vcxproj">
-      <Project>{62c92f8e-b13f-37ed-bcd3-a7fbe4d885f0}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
