--- a/HephaestusEngine.vcxproj
+++ b/HephaestusEngine.vcxproj
@@ -104,7 +104,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;$(ProjectDir)\VulpesRender\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;$(ProjectDir)\VulpesRender\include;$(ProjectDir)\VulpesRender\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
@@ -199,6 +199,7 @@
     <ClInclude Include="VulpesRender\gui\imgui_lib\stb_rect_pack.h" />
     <ClInclude Include="VulpesRender\gui\imgui_lib\stb_textedit.h" />
     <ClInclude Include="VulpesRender\gui\imgui_lib\stb_truetype.h" />
+    <ClInclude Include="VulpesRender\imgui\imgui.h" />
     <ClInclude Include="VulpesRender\include\BaseScene.h" />
     <ClInclude Include="VulpesRender\include\command\CommandPool.h" />
     <ClInclude Include="VulpesRender\include\command\TransferPool.h" />
