Overdue commit: not attaching commit message.

--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,4 @@ x64/Release/HephaestusEngine.ipdb
 x64/Release/HephaestusEngine.iobj
 x64/Release/HephaestusEngine.exe
 shader_cache/60439.vkdat
+rsrc/shader_cache/
