--- a/HephaestusEngine.vcxproj
+++ b/HephaestusEngine.vcxproj
@@ -104,7 +104,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;$(ProjectDir)\VulpesRender\include;$(ProjectDir)\VulpesRender\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;$(ProjectDir)\VulpesRender\include;$(ProjectDir)\VulpesRender\imgui;$(ProjectDir)\VulpesRender\ext;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
@@ -139,15 +139,16 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>Use</PrecompiledHeader>
-      <Optimization>Full</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)ext\include;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(VULKAN_SDK)\Include;$(ProjectDir)ext\include;$(ProjectDir)\VulpesRender\include;$(ProjectDir)\VulpesRender\imgui;$(ProjectDir)\VulpesRender\ext;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <AdditionalOptions>/std:c++latest %(AdditionalOptions)</AdditionalOptions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -155,7 +156,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\MSVC\OpenGL\lib;C:\MSVC\FastNoise-SIMD\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>"opengl32.lib";"$(ProjectDir)ext\lib\x64\glfw3dll.lib";"$(ProjectDir)ext\lib\x64\glew32s.lib";"$(ProjectDir)ext\lib\x64\LodePNG.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(VULKAN_SDK)\Lib\vulkan-1.lib;$(ProjectDir)\VulpesRender\build\Release\VulpesRender.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
@@ -167,8 +168,8 @@
     <ClInclude Include="common\Constants.h" />
     <ClInclude Include="common\Morton.h" />
     <ClInclude Include="engine\generation\NoiseGen.h" />
-    <ClInclude Include="engine\generation\NoiseSampler.h" />
     <ClInclude Include="engine\generation\TerrainGenerator.h" />
+    <ClInclude Include="engine\GUI_Elements.h" />
     <ClInclude Include="engine\MeshingTest.h" />
     <ClInclude Include="engine\mesh\Mesh.h" />
     <ClInclude Include="engine\mesh\MeshComponents.h" />
@@ -181,7 +182,6 @@
     <ClInclude Include="engine\objects\util\Inventory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="rendering\Camera.h" />
-    <ClInclude Include="util\AABB.h" />
     <ClInclude Include="util\Context.h" />
     <ClInclude Include="mesh\MeshComponents.h" />
     <ClInclude Include="mesh\Mesh.h" />
@@ -241,7 +241,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="engine\generation\NoiseGen.cpp" />
-    <ClCompile Include="engine\generation\NoiseSampler.cpp" />
     <ClCompile Include="engine\objects\Block.cpp" />
     <ClCompile Include="engine\objects\Chunk.cpp" />
     <ClCompile Include="engine\objects\ChunkManager.cpp" />
