--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/vulpesrender"]
 	path = third_party/vulpesrender
 	url = https://github.com/fuchstraumer/vulpesrender
+[submodule "third_party/glm"]
+	path = third_party/glm
+	url = https://github.com/g-truc/glm
